// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UiNodeLIcon > renders a basic icon 1`] = `
<svg
  className="style_icon__17wdnl21"
  fill="none"
  height={32}
  viewBox="0 0 32 32"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M11 27C4.92487 27 0 22.0751 0 16C0 9.92487 4.92487 5 11 5C12.8004 5 14.4999 5.43256 16 6.19942C17.5001 5.43256 19.1996 5 21 5C27.0751 5 32 9.92487 32 16C32 22.0751 27.0751 27 21 27C19.1996 27 17.5001 26.5674 16 25.8006C14.4999 26.5674 12.8004 27 11 27Z"
    fill="var(--tbl--colors--icons--transformation--secondary)"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M16 25.8005C12.4383 23.9798 10 20.2746 10 15.9999C10 11.7252 12.4383 8.02006 16 6.19934C19.5617 8.02004 22 11.7252 22 15.9999C22 20.2746 19.5617 23.9798 16 25.8005Z"
    fill="var(--tbl--colors--icons--transformation--primary)"
    fillRule="evenodd"
  />
</svg>
`;

exports[`UiNodeLIcon > renders a disabled icon if property is provided 1`] = `
<svg
  className="style_icon__17wdnl21 style_disabled__17wdnl20"
  fill="none"
  height={32}
  viewBox="0 0 32 32"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M11 27C4.92487 27 0 22.0751 0 16C0 9.92487 4.92487 5 11 5C12.8004 5 14.4999 5.43256 16 6.19942C17.5001 5.43256 19.1996 5 21 5C27.0751 5 32 9.92487 32 16C32 22.0751 27.0751 27 21 27C19.1996 27 17.5001 26.5674 16 25.8006C14.4999 26.5674 12.8004 27 11 27Z"
    fill="var(--tbl--colors--icons--transformation--secondary)"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M16 25.8005C12.4383 23.9798 10 20.2746 10 15.9999C10 11.7252 12.4383 8.02006 16 6.19934C19.5617 8.02004 22 11.7252 22 15.9999C22 20.2746 19.5617 23.9798 16 25.8005Z"
    fill="var(--tbl--colors--icons--transformation--primary)"
    fillRule="evenodd"
  />
</svg>
`;

exports[`UiNodeMIcon > renders a basic icon 1`] = `
<svg
  className="style_icon__17wdnl21"
  fill="none"
  height={24}
  viewBox="0 0 24 24"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M12 18.9297C10.8233 19.6104 9.45715 20 8 20C3.58172 20 0 16.4183 0 12C0 7.58172 3.58172 4 8 4C9.45715 4 10.8233 4.38958 12 5.07026C13.1767 4.38958 14.5429 4 16 4C20.4183 4 24 7.58172 24 12C24 16.4183 20.4183 20 16 20C14.5429 20 13.1767 19.6104 12 18.9297Z"
    fill="var(--tbl--colors--icons--transformation--tertiary)"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M12 18.9297C14.3912 17.5465 16 14.9611 16 12C16 9.03886 14.3912 6.45349 12 5.07025C9.60879 6.45349 8 9.03886 8 12C8 14.9611 9.6088 17.5465 12 18.9297Z"
    fill="var(--tbl--colors--icons--transformation--primary)"
    fillRule="evenodd"
  />
</svg>
`;

exports[`UiNodeMIcon > renders a disabled icon if property is provided 1`] = `
<svg
  className="style_icon__17wdnl21 style_disabled__17wdnl20"
  fill="none"
  height={24}
  viewBox="0 0 24 24"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M12 18.9297C10.8233 19.6104 9.45715 20 8 20C3.58172 20 0 16.4183 0 12C0 7.58172 3.58172 4 8 4C9.45715 4 10.8233 4.38958 12 5.07026C13.1767 4.38958 14.5429 4 16 4C20.4183 4 24 7.58172 24 12C24 16.4183 20.4183 20 16 20C14.5429 20 13.1767 19.6104 12 18.9297Z"
    fill="var(--tbl--colors--icons--transformation--tertiary)"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M12 18.9297C14.3912 17.5465 16 14.9611 16 12C16 9.03886 14.3912 6.45349 12 5.07025C9.60879 6.45349 8 9.03886 8 12C8 14.9611 9.6088 17.5465 12 18.9297Z"
    fill="var(--tbl--colors--icons--transformation--primary)"
    fillRule="evenodd"
  />
</svg>
`;
